language/move-lang/tests/move_check/parser/spec_parsing_implies_fail.exp
error: 

   ┌── tests/move_check/parser/spec_parsing_implies_fail.move:3:15 ───
   │
 3 │       let _ = x ==> x;
   │               ^^^^^^^ `==>` operator only allowed in specifications
   │

